# cardio-steps-visualization

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/example/com/br/detectcardnumber/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  native-lib.cpp
app/src/main/cpp/card.io-dmz/: .cproject  .project
app/src/main/java/example/com/br/detectcardnumber/: CameraPreview.java  DetectEdges.java  FirstActivity.java  FocusScore.java  Transform3D.java
app/src/main/java/example/com/br/detectcardnumber/cardio/: CardType.java  CreditCard.java  CreditCardNumber.java  DetectionInfo.java  Logo.java  OverlayView.java  Preview.java  StringHelper.java  Torch.java  Util.java
app/src/main/res/layout/: camera_preview.xml  detect_edges.xml  first_activity.xml  focus_score.xml  transform_3d.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/example/com/br/detectcardnumber/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
